tests/parser/bug_78/invalid_1.m.out
In invalid_1.m, line 3
| disp )foo     % lex error by MATLAB
|      ^ lex error: MATLAB/Octave cannot process command starting with )
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
