tests/parser/bug_78/invalid_1.m
%% (c) Copyright 2020 Florian Schanda

disp )foo     % lex error by MATLAB
